[gd_scene load_steps=24 format=3 uid="uid://bmxqsckbb6ww3"]

[ext_resource type="Texture2D" uid="uid://bjfvlpvox2l1f" path="res://floortexture.png" id="1_jvl57"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_r0gqw"]
[ext_resource type="Environment" uid="uid://ctymbwu7imuu3" path="res://default_env.tres" id="2_mwqcu"]
[ext_resource type="FontFile" uid="uid://d3atht6ersxhp" path="res://Orbitron-VariableFont_wght.ttf" id="4_fj18n"]
[ext_resource type="PackedScene" uid="uid://4gd2tan1vsly" path="res://smelter/smelter.tscn" id="4_htx7u"]
[ext_resource type="PackedScene" uid="uid://dqaeyvbfcfp2e" path="res://conveyor/conveyorbelt.tscn" id="4_mpqvy"]
[ext_resource type="PackedScene" uid="uid://mu5ibf2ct5yf" path="res://constructor/constructor.tscn" id="5_7d54d"]
[ext_resource type="Script" path="res://ui/main_menu_ui.gd" id="7_o25q5"]
[ext_resource type="Texture2D" uid="uid://c0octno42moqc" path="res://ui/Star.png" id="8_2uw6v"]
[ext_resource type="Texture2D" uid="uid://d32nr01ipqlbs" path="res://ui/Anka.png" id="8_j2x3h"]
[ext_resource type="PackedScene" uid="uid://byd5tf5xrv5u8" path="res://ui/settings/settings.tscn" id="11_amimp"]
[ext_resource type="PackedScene" uid="uid://dg42xvf5qaj8d" path="res://ui/loadingscreen.tscn" id="12_myrbn"]

[sub_resource type="PlaneMesh" id="PlaneMesh_nccft"]
size = Vector2(50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ptoi2"]
albedo_texture = ExtResource("1_jvl57")
uv1_scale = Vector3(60, 60, 60)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_j8jlv"]
data = PackedVector3Array(25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, 25, -25, 0, -25, 25, 0, -25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngnjq"]
bg_color = Color(0.760784, 0.54902, 0.32549, 1)
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljnyr"]
bg_color = Color(0.760784, 0.54902, 0.32549, 0.588235)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mp3ea"]
bg_color = Color(0.447059, 0.447059, 0.447059, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_28or1"]
load_path = "res://.godot/imported/Star.png-fe193f16e268cc5baacdd3409245fe77.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0qxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhngj"]
bg_color = Color(0, 0, 0, 0.196078)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56m7u"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_shfl6"]

[node name="main_menu" type="Node3D" node_paths=PackedStringArray("loadingscreen")]
script = ExtResource("1_r0gqw")
loadingscreen = NodePath("CanvasLayer/loadingscreen")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_nccft")
surface_material_override/0 = SubResource("StandardMaterial3D_ptoi2")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_j8jlv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_mwqcu")

[node name="machine" type="Node3D" parent="."]

[node name="conveyorbelt" parent="machine" instance=ExtResource("4_mpqvy")]

[node name="conveyorbelt2" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="conveyorbelt7" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="conveyorbelt8" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="conveyorbelt18" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 4, 0, 2)

[node name="conveyorbelt19" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 4, 0, 4)

[node name="conveyorbelt14" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="conveyorbelt17" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)

[node name="conveyorbelt6" parent="machine" instance=ExtResource("4_mpqvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="smelter" parent="machine" instance=ExtResource("4_htx7u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="constructor" parent="machine" instance=ExtResource("5_7d54d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="spawn_items" type="Marker3D" parent="machine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1.25, 4.5)

[node name="spawn_items_timer" type="Timer" parent="machine"]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("7_o25q5")

[node name="loadingscreen" parent="CanvasLayer" instance=ExtResource("12_myrbn")]
scale = Vector2(0.8, 0.8)

[node name="meny" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -433.0
offset_top = -639.0
offset_right = -55.0
offset_bottom = -55.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/separation = 70
alignment = 1

[node name="levels" type="Button" parent="CanvasLayer/meny"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngnjq")
text = "LEVELS"

[node name="sandbox" type="Button" parent="CanvasLayer/meny"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngnjq")
text = "SANDBOX"

[node name="settings" type="Button" parent="CanvasLayer/meny"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngnjq")
text = "SETTINGS"

[node name="avsluta" type="Button" parent="CanvasLayer/meny"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ngnjq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngnjq")
text = "EXIT"

[node name="titel" type="Label" parent="CanvasLayer"]
offset_right = 976.0
offset_bottom = 325.0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 35
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 220
text = "MINiRY"
horizontal_alignment = 1

[node name="levels" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/levels"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljnyr")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/levels"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/levels/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="level1" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mp3ea")

[node name="Label" type="Label" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 128
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Starlink" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1"]
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Star" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -69.0
offset_right = -182.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_2uw6v")

[node name="Star2" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -69.0
offset_right = -48.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CompressedTexture2D_28or1")

[node name="Anka" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_j2x3h")

[node name="Button" type="Button" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0qxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_bhngj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_56m7u")

[node name="level2" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mp3ea")

[node name="Label" type="Label" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 128
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Starlink" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2"]
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Star" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -69.0
offset_right = -182.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_2uw6v")

[node name="Star2" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -69.0
offset_right = -48.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_2uw6v")

[node name="Anka" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_j2x3h")

[node name="Button" type="Button" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0qxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_bhngj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_56m7u")

[node name="level3" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mp3ea")

[node name="Label" type="Label" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fj18n")
theme_override_font_sizes/font_size = 128
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Starlink" type="Control" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3"]
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Star" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -69.0
offset_right = -182.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_2uw6v")

[node name="Star2" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3/Starlink"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -69.0
offset_right = -48.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_2uw6v")

[node name="Anka" type="TextureRect" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_j2x3h")

[node name="Button" type="Button" parent="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0qxd")
theme_override_styles/hover = SubResource("StyleBoxFlat_bhngj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_56m7u")

[node name="settings_menu" parent="CanvasLayer" instance=ExtResource("11_amimp")]
visible = false

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.80799, 0.280236, -0.518286, 0, 0.879649, 0.475624, 0.589196, -0.3843, 0.710747, -9.746, 3.529, 3.772)
attributes = SubResource("CameraAttributesPractical_shfl6")

[node name="lights" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 7.40505, 0)
light_color = Color(0.882353, 0.623529, 0.615686, 1)
light_energy = 3.0
light_size = 2.0
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 1.25
spot_angle = 57.7

[node name="SpotLight3D2" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -3, 7.40505, -2)
light_color = Color(0.882353, 0.623529, 0.615686, 1)
light_energy = 7.0
light_size = 2.0
light_specular = 1.0
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 1.25
spot_angle = 65.17

[node name="SpotLight3D3" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -8, 7.40505, 0)
light_color = Color(0.882353, 0.623529, 0.615686, 1)
light_energy = 8.0
light_size = 2.0
light_specular = 1.0
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 1.25
spot_angle = 57.7

[node name="SpotLight3D4" type="SpotLight3D" parent="lights"]
transform = Transform3D(0.707107, 0.5, -0.5, -1.49012e-08, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -11, 4.40505, 6)
light_color = Color(0.882353, 0.623529, 0.615686, 1)
light_energy = 8.0
light_size = 1.0
light_specular = 1.0
shadow_enabled = true
spot_range = 20.2395
spot_attenuation = 1.25
spot_angle = 35.8702

[connection signal="timeout" from="machine/spawn_items_timer" to="." method="_on_spawn_items_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/meny/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/meny/sandbox" to="." method="_start_level" binds= [0]]
[connection signal="pressed" from="CanvasLayer/meny/settings" to="CanvasLayer" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/meny/avsluta" to="." method="_on_avsluta_pressed"]
[connection signal="pressed" from="CanvasLayer/levels/VBoxContainer/HBoxContainer/level1/Button" to="." method="_start_level" binds= [1]]
[connection signal="pressed" from="CanvasLayer/levels/VBoxContainer/HBoxContainer/level2/Button" to="." method="_start_level" binds= [2]]
[connection signal="pressed" from="CanvasLayer/levels/VBoxContainer/HBoxContainer/level3/Button" to="." method="_start_level" binds= [3]]
